Fix header z-index and sign up section: background image and position of CTA. Commented rem to px calculations. All in styles.css. Commented in meaning of CTA (call to action) in index.html.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,6 +38,7 @@ html {
 
 header {
   position: fixed;
+  z-index: 1;
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
@@ -116,14 +117,20 @@ header .mobile {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  height: 43.5rem;
+  height: 43.5rem; // 696px;
+  background-image: url("../images/banner-landingpage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
 }
 
 #sign-up-cta {
+  margin-top: 10.625rem; // 170px;
+  margin-left: 6.25rem; // 100px;
   padding: 0 5rem 2.5rem 5rem;
   border: solid 1px #979797;
   border-radius: 4px;
-  background-color: #9dc20b;
+  background-color: #9dc20a;
 }
 
 #sign-up-cta .content {
@@ -136,11 +143,11 @@ header .mobile {
 }
 
 #sign-up-cta h1 {
-  font-size: 3.125rem;
+  font-size: 3.125rem; // 50px;
 }
 
 #sign-up-cta h2 {
-  font-size: 2.25rem;
+  font-size: 2.25rem; // 40px;
 }
 
 #sign-up-cta span strong {
